Change URLs to dash case
Add small explaining text and improve button layout

--- a/trustpoint/templates/devices/help/generic_details/application_credential_selection.html
+++ b/trustpoint/templates/devices/help/generic_details/application_credential_selection.html
@@ -8,12 +8,12 @@
         <div class="card">
             <div class="card-header">
                 <div>
-                    <h1>{% trans 'Application Credential Selection' %}</h1>
+                    <h1>{% trans 'Help - Application Credential Selection' %}</h1>
                 </div>
             </div>
             <div class="card-body">
                 <div class="tp-card-centered-content">
-
+                    <p>{% trans 'Please select the type of application credential you wish to issue.' %}</p>
                     <div class="d-flex flex-wrap align-items-start gap-2">
                         <a href="{% url 'devices:help_dispatch_application_template' pk=device.id certificate_template='tls-client' %}"
                            class="btn btn-primary tp-table-btn min-width-20">{% trans "TLS-Client Credential" %}</a>
@@ -32,9 +32,9 @@
                 </div>
 
             </div>
-            <div class="card-footer">
-                <div class="tp-card-btn-footer">
-                    <button type="button" value="Back" class="btn btn-secondary btn-half" onClick="history.back()">{% trans 'Back' %}</button>
+            <div class="card-footer d-flex justify-content-between align-items-center">
+                <div class="tp-card-btn-footer m-1">
+                    <button type="button" value="Back" class="btn btn-secondary" onClick="history.back()">{% trans 'Back' %}</button>
                 </div>
             </div>
         </div>
