--- a/trustpoint/templates/devices/confirm_bulk_revoke.html
+++ b/trustpoint/templates/devices/confirm_bulk_revoke.html
@@ -1,12 +1,17 @@
 {% extends 'trustpoint/base.html' %}
 {% load i18n %}
+{% load crispy_forms_tags %}
 {% load static %}
 
 {% block content %}
+    <form action="{% url 'devices:device_revocation' %}" method="post" style="display: inline;">
+        {% csrf_token %}
+        {{ revoke_form.pks }}
+
         <div class="card">
             <div class="card-header">
                 <div>
-                    <h1>{% trans 'Confirm Device Deletion' %}</h1>
+                    <h1>{% trans 'Confirm Device Revokation' %}</h1>
                 </div>
             </div>
             <div class="card-body">
@@ -38,21 +43,21 @@
 
                         {% endif %}
                     {% endfor %}
-
-
                 </div>
+
+                <hr>
+                {{ revoke_form.revocation_reason | as_crispy_field }}
+
             </div>
             <div class="card-footer d-flex">
                 <div class="tp-card-btn-footer m-1">
                     <a href="{% url 'devices:devices' %}" class="btn btn-secondary">{% trans 'Cancel' %}</a>
-                    <form action="{% url 'devices:device_delete' %}" method="post" style="display: inline;">
-                        {% csrf_token %}
-                        {{ delete_form.pks }}
                         <button type="submit" class="btn btn-danger">
-                            {% trans 'Delete selected devices' %}
+                            {% trans 'Revokes selected devices' %}
                         </button>
                     </form>
                 </div>
             </div>
         </div>
+    </form>
 {% endblock content %}
