Minor string improvements

--- a/trustpoint/templates/setup_wizard/initial.html
+++ b/trustpoint/templates/setup_wizard/initial.html
@@ -43,7 +43,7 @@
         
         <div class="card-body pt-3 pb-4">
             <hr class="mb-4">
-            <a href="{% url 'setup_wizard:options' %}" class="btn btn-primary d-flex justify-content-center">{% trans 'Options' %}</a>
+            <a href="{% url 'setup_wizard:options' %}" class="btn btn-primary d-flex justify-content-center">{% trans 'Restore from backup' %}</a>
         </div>
     </div>
 
