--- a/trustpoint/templates/setup_wizard/options.html
+++ b/trustpoint/templates/setup_wizard/options.html
@@ -31,14 +31,14 @@
             <h1>{% trans "Trustpoint - Setup Wizard" %}</h1>
         </div>
         <div class="card-body pt-3 pb-4">
-            <h2>{% trans 'Options' %}</h2>
+            <h2>{% trans 'Restore Database backup' %}</h2>
             <hr class="mb-4">
 
             <a href="" class="btn btn-secondary primary d-flex justify-content-center disabled">{% trans 'Trustpoint update' %}</a>
             <a class="btn btn-primary d-flex justify-content-center"
                 data-bs-toggle="modal"
                 data-bs-target="#restoreModal">
-                {% trans 'Trustpoint restore' %}
+                {% trans 'Upload backup file' %}
             </a>
 
             <div class="modal fade" id="restoreModal" tabindex="-1" aria-labelledby="restoreModalLabel" aria-hidden="true">
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             </div>
-            <br>
+            <hr class="mb-4">
             <a href="{% url 'setup_wizard:initial' %}" class="btn btn-secondary w-100 mt-1">{% trans "Cancel" %}</a>
         </div>
     </div>
