--- a/trustpoint/templates/trustpoint/base.html
+++ b/trustpoint/templates/trustpoint/base.html
@@ -74,20 +74,20 @@
             </div>
 
             <div class="tp-menu-group">
-                <a href="{% url 'settings:language' %}" class="tp-menu-head {% if page_category == 'settings' %}tp-menu-active{% endif %}">
+                <a href="{% url 'management:language' %}" class="tp-menu-head {% if page_category == 'settings' %}tp-menu-active{% endif %}">
                     <svg class="bi" fill="currentColor" role="img">
                         <use href="{% static 'img/icons.svg' %}#icon-settings"></use></svg>
-                        {% translate "Settings" %}
+                        {% translate "Management" %}
                     <div class="btn-collapse" data-category="settings"
                         aria-expanded="{% if page_category == 'settings' %}true{% else %}false{% endif %}">
                     </div>
                 </a>
                 <div class="tp-menu-collapse {% if page_category == 'settings' %}show{% endif %}">
-                    <a href="{% url 'settings:language' %}" class="tp-menu-item {% if page_name == 'language' %}tp-menu-active{% endif %}">{% trans "Language" %}</a>
-                    <a href="{% url 'settings:logging-files' %}" class="tp-menu-item {% if page_name == 'logging' %}tp-menu-active{% endif %}">{% trans "Logging" %}</a>
-                    <a href="{% url 'settings:tls' %}" class="tp-menu-item {% if page_name == 'tls' %}tp-menu-active{% endif %}">{% trans "TLS" %}</a>
+                    <a href="{% url 'management:language' %}" class="tp-menu-item {% if page_name == 'language' %}tp-menu-active{% endif %}">{% trans "Language" %}</a>
+                    <a href="{% url 'management:logging-files' %}" class="tp-menu-item {% if page_name == 'logging' %}tp-menu-active{% endif %}">{% trans "Logging" %}</a>
+                    <a href="{% url 'management:tls' %}" class="tp-menu-item {% if page_name == 'tls' %}tp-menu-active{% endif %}">{% trans "TLS" %}</a>
 {#                    <a href="{% url 'settings:ntp' %}" class="tp-menu-item {% if page_name == 'ntp' %}tp-menu-active{% endif %}">{% trans "NTP" %}</a>#}
-                    <a href="{% url 'settings:security' %}" class="tp-menu-item {% if page_name == 'security' %}tp-menu-active{% endif %}">{% trans "Security" %}</a>
+                    <a href="{% url 'management:security' %}" class="tp-menu-item {% if page_name == 'security' %}tp-menu-active{% endif %}">{% trans "Security" %}</a>
                 </div>
             </div>
             <div class="tp-menu-footer">
