--- a/trustpoint/templates/devices/opc_ua_gds.html
+++ b/trustpoint/templates/devices/opc_ua_gds.html
@@ -19,8 +19,8 @@
                     data-tp-url="/devices/delete">{% trans 'Delete selected' %}</button>
           </div>
           <div class="m-1">
-            <a class="btn btn-primary" href="{% url 'devices:opc_ua_gds-add' %}">
-              {% trans "Add new OPC UA GDS" %}
+            <a class="btn btn-primary" href="{% url create_url %}">
+              {% trans "Create new OPC UA GDS" %}
             </a>
           </div>
         </div>
