--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="card-body">
-            <h2>{% trans "Device" %} <a href="{% url 'devices:details' pk=device.id %}">{% trans "Details" %}</a></h2>
+            <h2>{% trans "Device" %} <a href="{% url details_url pk=device.id %}">{% trans "Details" %}</a></h2>
             <hr class="hr-m">
             <ul class="tp-kvp-list">
                 <li>
@@ -232,7 +232,7 @@
         </div>
         <div class="card-footer d-flex justify-content-between align-items-center">
             <div class="tp-card-btn-footer m-1">
-                <a href="{% url 'devices:devices' %}" class="btn btn-secondary">{% trans 'Back' %}</a>
+                <a href="{% url main_url %}" class="btn btn-secondary">{% trans 'Back' %}</a>
             </div>
         </div>
     </div>
