--- a/trustpoint/templates/devices/devices.html
+++ b/trustpoint/templates/devices/devices.html
@@ -23,16 +23,9 @@
                       data-tp-url="delete-device">{% trans 'Delete selected' %}</button>
           </div>
           <div class="m-1">
-            {% if page_name == 'devices' %}
-              <a class="btn btn-primary" href="{% url 'devices:devices_create' %}">
-                {% trans "Add new Device" %}
-              </a>
-            {% elif page_name == 'opc_ua_gds' %}
-              <a class="btn btn-primary" href="{% url 'devices:opc_ua_gds_create' %}">
-                {% trans "Add new Device" %}
-              </a>
-            {% endif %}
-            
+            <a class="btn btn-primary" href="{% url create_url %}">
+              {% trans "Create new Device" %}
+            </a>
           </div>
         </div>
     </div>
