--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -153,8 +153,8 @@
                         </a>
                     {% else %}
                         <a href="{% url 'devices:help_dispatch_device_type_redirect' pk=device.pk %}"
-                           class="btn {% if device.domain_credential_onboarding %}btn-secondary{% else %}btn-primary{% endif %}"
-                           style="width: 25rem; {% if device.domain_credential_onboarding %}pointer-events: none;{% endif %}"
+                           class="btn {% if device.domain_credential_onboarding %}btn-secondary pe-none{% else %}btn-primary{% endif %}"
+                           style="width: 25rem;"
                            {% if device.domain_credential_onboarding %}aria-disabled="true"{% endif %}>
                             {% trans "Help - Issue new Application Credentials" %}
                         </a>
@@ -170,7 +170,6 @@
                 <table class="table">
                     <thead>
                     <tr>
-                        <!-- <th id="checkbox-column"><input type="checkbox"/></th> -->
                         <th>
                             <a href="#" onclick="updateQueryParam(event, 'sort', 'domain')">
                                 {% trans 'Domain' %}
@@ -192,14 +191,10 @@
                             </a>
                         </th>
                         <th>
-                            <!-- <a href="#" onclick="updateQueryParam(event, 'sort', 'expiration_date')"> -->
                             {% trans 'Expiration date' %}
-                            <!-- </a> -->
                         </th>
                         <th>
-                            <!-- <a href="#" onclick="updateQueryParam(event, 'sort', 'expires_in')"> -->
                             {% trans 'Expires in' %}
-                            <!-- </a> -->
                         </th>
                         <th>{% trans 'Download' %}</th>
                         <th>{% trans 'Revoke' %}</th>
