--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -56,16 +56,16 @@
                     <h2>{% trans "Issue new Application Credentials" %}</h2>
                     <hr>
                     <div class="d-flex flex-wrap align-items-start gap-2">
-                        <a href="{% url 'devices:certificate_lifecycle_management-issue_tls_client_credential' pk=device.id %}"
+                        <a href="{% url issue_tls_client_cred_url pk=device.id %}"
                            class="btn btn-primary tp-table-btn min-width-20">{% trans "TLS-Client Credential" %}</a>
-                        <a href="{% url 'devices:certificate_lifecycle_management-issue_tls_server_credential' pk=device.id %}"
+                        <a href="{% url issue_tls_server_cred_url pk=device.id %}"
                            class="btn btn-primary tp-table-btn min-width-20">{% trans "TLS-Server Credential" %}</a>
                     </div>
                     <br>
                     <div class="d-flex flex-wrap align-items-start gap-2">
-                        <a href="{% url 'devices:certificate_lifecycle_management-issue_opcua_client_credential' pk=device.id %}"
+                        <a href="{% url issue_opc_ua_client_cred_url pk=device.id %}"
                            class="btn btn-primary tp-table-btn min-width-20">{% trans "OPC UA Client Credential" %}</a>
-                        <a href="{% url 'devices:certificate_lifecycle_management-issue_opcua_server_credential' pk=device.id %}"
+                        <a href="{% url issue_opc_ua_server_cred_url pk=device.id %}"
                            class="btn btn-primary tp-table-btn min-width-20">{% trans "OPC UA Server Credential" %}</a>
                         <div class="mb-5"></div>
                     </div>
