--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -125,7 +125,7 @@
                                 <td>{{ cred.created_at }}</td>
                                 <td>{{ cred.expiration_date }}</td>
                                 <td>{{ cred.expires_in }}</td>
-                                <td><a href="{% url 'devices:download' cred.id %}" class="btn btn-primary tp-table-btn">
+                                <td><a href="{% url download_url cred.id %}" class="btn btn-primary tp-table-btn">
                                     {% trans 'Download' %}
                                 </a></td>
                                 <td>{{ cred.revoke }}</td>
@@ -209,7 +209,7 @@
                             <td>{{ cred.created_at }}</td>
                             <td>{{ cred.expiration_date }}</td>
                             <td>{{ cred.expires_in }}</td>
-                            <td><a href="{% url 'devices:download' cred.id %}" class="btn btn-primary tp-table-btn">
+                            <td><a href="{% url download_url cred.id %}" class="btn btn-primary tp-table-btn">
                                 {% trans 'Download' %}
                             </a></td>
                             <td>{{ cred.revoke }}</td>
