--- a/trustpoint/templates/devices/credentials/issue_application_credential.html
+++ b/trustpoint/templates/devices/credentials/issue_application_credential.html
@@ -23,7 +23,7 @@
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
                 <div class="tp-card-btn-footer m-1">
-                    <a href="{% url 'devices:certificate_lifecycle_management' pk=device.pk %}" class="btn btn-secondary">{% trans "Cancel" %}</a>
+                    <a href="{% url clm_url pk=device.pk %}" class="btn btn-secondary">{% trans "Cancel" %}</a>
                     <button type="submit" class="btn btn-primary">{% trans "Issue Application Credential" %}</button>
                 </div>
             </div>
