--- a/trustpoint/templates/devices/credentials/onboarding/browser/otp_view.html
+++ b/trustpoint/templates/devices/credentials/onboarding/browser/otp_view.html
@@ -54,8 +54,8 @@
         </div>
         <div class="card-footer d-flex justify-content-between align-items-center">
             <div class="tp-card-btn-footer m-1">
-                <a href="{% url 'devices:credential-download' pk=credential_id %}" class="btn btn-secondary">{% trans "Back" %}</a>
-                <a href="{% url 'devices:browser_cancel' pk=credential_id %}" class="btn btn-danger">{% trans "Cancel" %}</a>
+                <a href="{% url cred_download_url pk=credential_id %}" class="btn btn-secondary">{% trans "Back" %}</a>
+                <a href="{% url browser_cancel pk=credential_id %}" class="btn btn-danger">{% trans "Cancel" %}</a>
             </div>
         </div>
     </div>
