--- a/trustpoint/templates/devices/confirm_delete.html
+++ b/trustpoint/templates/devices/confirm_delete.html
@@ -45,7 +45,7 @@
             <div class="card-footer d-flex">
                 <div class="tp-card-btn-footer m-1">
                     <a href="{% url 'devices:devices' %}" class="btn btn-secondary">{% trans 'Cancel' %}</a>
-                    <form action="{% url 'devices:device_delete' %}" method="post" style="display: inline;">
+                    <form action="{% url device_delete_url %}" method="post" style="display: inline;">
                         {% csrf_token %}
                         {{ delete_form.pks }}
                         <button type="submit" class="btn btn-danger">
