--- a/trustpoint/templates/devices/credentials/credential_download.html
+++ b/trustpoint/templates/devices/credentials/credential_download.html
@@ -66,14 +66,14 @@
 
                         {% if not is_browser_dl %}
                         <hr>
-                            <a href="{% url 'devices:browser_otp_view' pk=issued_credential.id %}"  class="btn btn-primary min-width-42">{% trans 'Download on Device browser' %}</a>
+                            <a href="{% url browser_otp_url pk=issued_credential.id %}"  class="btn btn-primary min-width-42">{% trans 'Download on Device browser' %}</a>
                         {% endif %}
                     </div>
                 </div>
             {% if not is_browser_dl %}
             <div class="card-footer d-flex justify-content-between align-items-center">
                 <div class="tp-card-btn-footer m-1">
-                    <a href="{% url 'devices:certificate_lifecycle_management' pk=issued_credential.device.id %}" class="btn btn-secondary">{% trans 'Back' %}</a>
+                    <a href="{% url clm_url pk=issued_credential.device.id %}" class="btn btn-secondary">{% trans 'Back' %}</a>
                     <a href="{% url 'devices:devices' %}" class="btn btn-secondary">{% trans 'Cancel' %}</a>
                 </div>
             </div>
