--- a/trustpoint/templates/devices/devices.html
+++ b/trustpoint/templates/devices/devices.html
@@ -18,9 +18,9 @@
       <div class="card-footer d-flex justify-content-between tp-sticky-footer">
           <div class="tp-card-btn-footer m-1">
               <button type="button" class="btn btn-danger tp-table-select-btn me-2"
-                      data-tp-url="revoke-device">{% trans 'Revoke selected' %}</button>
+                      data-tp-url="{{ device_revoke_url }}">{% trans 'Revoke selected' %}</button>
               <button type="button" class="btn btn-danger tp-table-select-btn me-2"
-                      data-tp-url="delete-device">{% trans 'Delete selected' %}</button>
+                      data-tp-url="{{ device_delete_url }}">{% trans 'Delete selected' %}</button>
           </div>
           <div class="m-1">
             <a class="btn btn-primary" href="{% url create_url %}">
