settings logging quick fix

--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -74,7 +74,7 @@
             {% else %}
                 <h2 class="d-flex justify-content-between align-items-center">
                     <span>{% trans "Issued Domain Credentials" %}</span>
-                    <a href="{% url 'devices:help_dispatch_domain' pk=device.pk %}" class="btn btn-primary"
+                    <a href="{% url help_dispatch_domain_url pk=device.pk %}" class="btn btn-primary"
                        style="width: 25rem;">
                         {% trans "Help - Issue new Domain Credentials" %}
                     </a>
@@ -147,12 +147,12 @@
                     <span>{% trans "Issued Application Credentials" %}</span>
 
                     {% if device.onboarding_status != device.OnboardingStatus.PENDING.value %}
-                        <a href="{% url 'devices:help_dispatch_device_type_redirect' pk=device.pk %}" class="btn btn-primary"
+                        <a href="{% url help_dispatch_device_type_url pk=device.pk %}" class="btn btn-primary"
                            style="width: 25rem;">
                             {% trans "Help - Issue new Application Credentials" %}
                         </a>
                     {% else %}
-                        <a href="{% url 'devices:help_dispatch_device_type_redirect' pk=device.pk %}"
+                        <a href="{% url help_dispatch_device_type_url pk=device.pk %}"
                            class="btn {% if device.domain_credential_onboarding %}btn-secondary pe-none{% else %}btn-primary{% endif %}"
                            style="width: 25rem;"
                            {% if device.domain_credential_onboarding %}aria-disabled="true"{% endif %}>
